# avelo

./: .env  .env.example  .gitignore  USTATOPISH_TASKS.md  docker-compose.yml
.claude/: settings.local.json
api/: Dockerfile  alembic.ini  pyproject.toml
api/app/: main.py
api/app/core/: config.py  dependencies.py  exceptions.py  security.py
api/app/db/: base.py  session.py
api/app/db/migrations/: env.py
api/app/models/: __init__.py  admin.py  booking.py  cashback.py  favorite.py  notification.py  part_bonus.py  parts.py  payment.py  review.py  service.py  subscription.py  user.py  vehicle.py  warranty.py  workshop.py
api/app/routers/: __init__.py  admin.py  auth.py  bookings.py  notifications.py  partner.py  parts.py  payments.py  reviews.py  users.py  warranty.py  workshops.py
api/app/schemas/: __init__.py  auth.py  booking.py  cashback.py  common.py  parts.py  payment.py  review.py  user.py  warranty.py  workshop.py
api/app/services/: __init__.py  auth_service.py  booking_service.py  notification_service.py  payment_service.py  review_service.py  workshop_service.py
api/app/utils/: pagination.py
api/scripts/: fill_gaps.py  seed.py  seed_full.py  seed_partner_test.py  seed_parts.py  seed_test.py
api/seed_data/: 01_avelo_init.sql
api/tests/: conftest.py
api/tests/integration/: test_auth_api.py
frontend/: Dockerfile  index.html  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/app/: i18n.ts  store.ts
frontend/src/features/auth/: authSlice.ts
frontend/src/features/ui/: uiSlice.ts
(+62 files in other folders)
